# normandy

./: .babelrc  .buildinfo  .circleci  .coveragerc  .dockerignore  .eslintrc  .eslintrc.js  .eslintrc.yaml  .flake8  .gitignore  .jpmignore  .pyup.yml  .readthedocs.yml  .stylelintrc  .taskcluster.yml  .therapist.yml  .travis.yml  CONTRACT-TESTS.md  Dockerfile  Dockerfile.development  Makefile  Procfile  README.md  babel.config.js  bootstrap.js  bors.toml  build-includes.txt  chrome.manifest  circle.yml  conftest.py  docker-compose.yml  generate_from_openapi.py  genindex.html  index.html  index.js  injected.js  install.rdf  jar.mn  karma.conf.js  manage.py  (+18 more)
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/adrs/: adr-0003-double-signatures.rst.txt
_sources/dev/: api-tests.rst.txt  ci.rst.txt  concepts.rst.txt  coverage.rst.txt  index.rst.txt  install.rst.txt  remote-settings.rst.txt  workflow.rst.txt
_sources/ops/: config.rst.txt
addon-builder/: Dockerfile  README.md  dot.hgrc
adrs/: adr-0001-content-signing.html  adr-0002-remote-settings.html  adr-0003-double-signatures.html  index.html
api-tests/: test_v3.production.tavern.yaml  test_v3.staging.tavern.yaml
ci/: deploy.sh  docker-compose.ci.yml  docker-compose.development.yml  docker-compose.yml  js-tests-browser.Dockerfile  karma-ci.js  run.sh
client/: README.md
compose/: README.md  docker-compose-dev.yml  docker-compose.yml  normandy-base.yml
contract-tests/: conftest.py  test_api.py  test_heartbeat.py  test_performance.py  test_v3_api.py
data/: EventEmitter.js
dev/: api-tests.html  ci.html  concepts.html  coverage.html  docker.html  feature-experiments.html  index.html  install.html  remote-settings.html  troubleshooting.html  workflow.html
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
e2e-tests/: README.md  config.ini-dist  tox.ini
eslint-config-normandy/: package-lock.json  package.json
etc/: autograph.yaml  nginx.conf
functional-tests/: Dockerfile  docker-compose.yml  test_basic.py
functional_tests/: .dockerignore  Dockerfile  README.md  capabilities.json  docker-compose.yml  pytest.ini
lib/: CleanupManager.js  CleanupManager.jsm  EnvExpressions.js  EnvExpressions.jsm  EventEmitter.js  Heartbeat.js  Heartbeat.jsm  Http.js  Log.js  Log.jsm  NormandyApi.js  NormandyApi.jsm  NormandyDriver.js  NormandyDriver.jsm  Preferences.jsm  RecipeRunner.js  RecipeRunner.jsm  Sampling.jsm  Sandbox.js  SandboxManager.js  SandboxManager.jsm  SelfRepairInteraction.js  SelfRepairInteraction.jsm  Storage.js  Storage.jsm  loader.js  stableSample.js
lints/: Dockerfile  README.md  package-lock.json  package.json
load_tests/: README.md  prod-like.lua
mock-recipe-server/: README.md  api_index.html  conftest.py  docker-compose.yml  fixtures.py  generate.py  pytest.ini  test.py  test_mock_server.py  testcases.py  utils.py
mozjexl/: .eslintrc  Dockerfile  LICENSE.txt  README.md  gulpfile.js  package-lock.json  package.json
normandy/: conftest.py  constants.py  schema.py  settings.py  storage.py  urls.py  webpack.config.js  wsgi.py
ops/: config.html  index.html
qa/: environments.html  example.html  index.html  test_engineering.html
recipe-client-addon/: .eslintrc.js  .gitignore  .stylelintrc  README.md  bootstrap.js  build-includes.txt  chrome.manifest  circle.yml  install.rdf  install.rdf.in  jar.mn  moz.build  package-lock.json  package.json  webpack.config.js
recipe-server/: .babelrc  .dockerignore  .eslintrc  .flake8  .gitignore  .nsprc  .stylelintrc  Dockerfile  README.md  karma.conf.js  package-lock.json  package.json  vendor.webpack.config.js  vendors.webpack.config.js  webpack.config.js
requirements/: constraints.txt  default.txt  dev.txt  docs.txt  pip.txt  py36_docs.txt
system-tests/: Dockerfile  conftest.py  pytest.ini  requirements.txt  run_tests.sh  test_basic.py
test/: .eslintrc.js  .eslintrc.yaml  browser.ini  browser_EventEmitter.js  browser_Heartbeat.js  browser_NormandyApi.js  browser_RecipeRunner.js  browser_driver_uuids.js  browser_env_expressions.js  browser_test.js  test-EventEmitter.js  test-Heartbeat.js  test-driver.js  test-env-expressions.js  test-event-EventEmitter.js  test-index.js  test-storage.js  test_server.sjs  utils.js
user/: api.html  data_collection.html  end_user_interaction.html  filters.html  index.html  peer_approval.html
(+1701 files in other folders)
